--- a/style.css
+++ b/style.css
@@ -1,43 +1,53 @@
-*{
+* {
     box-sizing: border-box;
     margin: 0;
 }
+
 body {
     background-color: black;
 }
+
 .home {
     background-image: url(images/home-img.jpeg);
     background-size: cover;
     height: 100vh;
 }
+
 header {
     height: 90px;
     border: 1px solid;
-    border-bottom: 0.1rem solid rgba(255,255,255,.3);
+    border-bottom: 0.1rem solid rgba(255, 255, 255, .3);
     position: sticky;
     top: 0;
     background-color: black;
-   
+
 }
-nav{
+
+nav {
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
+
 .logo {
     padding: 10px 100px;
 }
+
 .logo img {
     height: 65px;
 }
+
 ul {
     display: flex;
     transform: translateX(-450px);
     list-style: none;
+    font-family: 'Courier New', Courier, monospace;
 }
+
 li {
     margin-left: 20px;
 }
+
 a {
     text-decoration: none;
     font-size: 1.1rem;
@@ -48,16 +58,19 @@ a {
     max-width: 600px;
     padding: 100px 0 0 100px;
 }
+
 .home .content h3 {
     font-size: 55px;
     text-transform: uppercase;
     color: #fff;
 }
+
 .home .content p {
     color: white;
     margin-top: 10px;
     line-height: 30px;
 }
+
 .home .content a {
     margin-top: 1rem;
     display: inline-block;
@@ -65,17 +78,19 @@ a {
     font-size: 1.7rem;
     color: #fff;
     background-color: #d3ad7f;
-    
+
 }
 
- h1 {
+h1 {
     text-align: center;
     color: white;
     font-size: 40px;
 }
+
 span {
-    color:#d3ad7f;
+    color: #d3ad7f;
 }
+
 .row {
     display: flex;
     margin: 20px 70px;
@@ -83,6 +98,7 @@ span {
     height: 450px;
     background-color: #13131a;
 }
+
 .row img {
     height: 450px;
 }
@@ -92,16 +108,19 @@ span {
     transform: translatey(25%);
     margin-left: 60px;
 }
+
 .row .contant h3 {
     font-size: 30px;
-    
+
 }
+
 .row .contant p {
     margin-top: 20px;
     line-height: 20px;
     font-size: 15px;
-    
+
 }
+
 .btn2 {
     color: white;
     background-color: #d3ad7f;
@@ -112,17 +131,20 @@ span {
     padding: 5px;
     text-align: center;
 }
+
 form {
     padding: 40px 20px;
     transform: translateX(40px);
-    
+
 }
+
 input {
     display: block;
     margin-top: 30px;
     height: 50px;
     width: 100%;
 }
+
 #btn3 {
     transform: translateX(130px);
 }
